@@ -4,6 +4,9 @@ Changelog
 1.2.0 (unreleased)
 ------------------
 
+* Catch errors if sessions are disabled.
+  [swampmonkey]
+
 * Use ``plone.app.portlets.ManagePortlets`` permission, allows site-admins
   to add/edit the portlet.
   [ggozad]
